[gd_scene load_steps=8 format=3 uid="uid://c24mj370yrudd"]

[ext_resource type="Script" uid="uid://c65jk0j0p761p" path="res://Scripts/UI/hearts_ui.gd" id="1_v1ije"]
[ext_resource type="Texture2D" uid="uid://c8mwlsofbjnej" path="res://Sprites/UI/heart.png" id="2_rqfrp"]
[ext_resource type="Texture2D" uid="uid://cdfjrv25j88kg" path="res://Sprites/Items/Pearl_16.png" id="3_46khp"]
[ext_resource type="FontFile" uid="uid://bilc72o6ep70t" path="res://Fonts/PixelifySans-VariableFont_wght.ttf" id="4_1isjq"]
[ext_resource type="Script" uid="uid://cjlaku3k7st51" path="res://Scripts/UI/label.gd" id="5_l7p21"]
[ext_resource type="Script" uid="uid://ubrkalxw30s6" path="res://Scripts/UI/AmmoUI.gd" id="6_rqfrp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqfrp"]
bg_color = Color(0.003921569, 0.003921569, 0.003921569, 0)

[node name="GUI" type="CanvasLayer" groups=["GUI"]]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeartsUI" type="HBoxContainer" parent="Control" groups=["HeartsUI"]]
layout_direction = 2
layout_mode = 0
offset_left = 20.0
offset_right = 176.0
offset_bottom = 16.0
scale = Vector2(4, 4)
size_flags_horizontal = 3
theme_override_constants/separation = -1
script = ExtResource("1_v1ije")
heart_texture = ExtResource("2_rqfrp")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.99994
offset_top = 1.0
offset_right = -59.0
offset_bottom = 34.0
grow_horizontal = 0
scale = Vector2(1.5, 1.5)

[node name="PearlsUI" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/PearlsUI"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_46khp")
expand_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/PearlsUI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1isjq")
theme_override_font_sizes/font_size = 27
text = "x 0"
script = ExtResource("5_l7p21")

[node name="AmoUI" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 513.0
offset_top = 3.0
offset_right = 615.0
offset_bottom = 43.0
script = ExtResource("6_rqfrp")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/AmoUI"]
layout_mode = 2

[node name="AmmoLabel" type="Label" parent="Control/AmoUI/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7882353, 0.2784314, 0.05490196, 1)
theme_override_fonts/font = ExtResource("4_1isjq")
theme_override_font_sizes/font_size = 45

[node name="ReloadPane" type="Panel" parent="Control/AmoUI"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rqfrp")

[node name="ReloadLabel" type="Label" parent="Control/AmoUI/ReloadPane"]
modulate = Color(0.7882353, 0.2784314, 0.05490196, 1)
layout_mode = 0
offset_left = -66.0
offset_top = 72.0
offset_right = 375.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("4_1isjq")
theme_override_font_sizes/font_size = 40
text = "Pulsa R para recargar"
